timing gap bug fix

--- a/src/options/Options.css
+++ b/src/options/Options.css
@@ -66,10 +66,11 @@ h3 {
 /* content-to-post */
 .content-to-post textarea{
   width: 100%;
-  height: 200px;
+  min-height: 200px;
 }
-.content-to-post .btn-container{
+.btn-container{
   text-align: center;
+  margin-top: 4px;
 }
 
 /* General button styles */  
@@ -80,7 +81,8 @@ h3 {
   padding: 12px 24px;  
   border-radius: 5px;  
   color: #ffffff;  
-  background-color: #3498db; /* Button color */  
+  background-color: #3498db; /* Button color */
+  cursor: pointer;
   text-decoration: none;  
   text-align: center;  
   transition: background-color 0.3s ease, transform 0.2s ease;  
@@ -122,7 +124,6 @@ h3 {
 
 
 
-
 /* Package Plans */
 .plan-name.active{
   font-weight: bold;
@@ -134,6 +135,13 @@ h3 {
 .packages .btn-container{
   margin-left: 1rem;
 }
+
+
+/* Tabs */
+.tabs-container{
+  margin-bottom: 4px;
+}
+
 
 
 /*
